# cv

./: .gitignore  CV_REVIEW_AND_RECOMMENDATIONS.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: cv.yaml
docs/: index.html  portfolio.html
docs/static/css/: styles.css
docs/static/pics/frameworks/: README.md
docs/static/pics/programming_langs/: README.md
prompts/: cv_analysis.md
scripts/: build.py  build.sh  validate_cv.py
static/css/: styles.css
static/js/: pdf-generator.js
templates/: base.html  cv.html  cv_pdf.html  portfolio.html
